--- a/codelogs/log3.html
+++ b/codelogs/log3.html
@@ -9,6 +9,8 @@
 
 	<!-- external and internal CSS -->
 	<link rel="stylesheet" href="styles.css" media="all">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+
 	<style>
 		
        h2 {
@@ -19,8 +21,8 @@
         h1 {
             grid-area: h1;
             text-align: center;
-            font-family: "Arial", sans-serif;
-            font-size: 50pt;
+            font-family: 'Roboto', Arial, sans-serif;
+            font-size: 4rem;
         }
 
         #question1 {
@@ -56,10 +58,11 @@
 	</style>
 
 </head>
+
 <body>
 
-    <div id="codelog1">
-	<h1>Code Log 2: CSS Measuring Units</h1>
+    <div id="codelog3">
+	<h1>Code Log 3: CSS Media Queries</h1>
     
             <section id="question1">
                 <h2>How does a CSS media query work, and why is it useful?</h2>
