testing font and color

--- a/codelogs/log3.html
+++ b/codelogs/log3.html
@@ -9,7 +9,7 @@
 
 	<!-- external and internal CSS -->
 	<link rel="stylesheet" href="styles.css" media="all">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&display=swap" rel="stylesheet">
 
 	<style>
 		
@@ -21,22 +21,24 @@
         h1 {
             grid-area: h1;
             text-align: center;
-            font-family: 'Roboto', Arial, sans-serif;
+            font-family: 'Amatic SC', cursive;
             font-size: 4rem;
         }
 
         #question1 {
             grid-area: question1;
-            background-color: rgb(255, 255, 255);
+            background-color: rgb(83, 81, 96);
             font-family: "Arial", sans-serif;
+            color: white;
             text-align: justify;
             padding: 20px; 
         }
 
         #question2 {
             grid-area: question2;
-            background-color: rgb(255, 255, 255);
+            background-color: rgb(83, 81, 96);
             font-family: "Arial", sans-serif;
+            color: white;
             text-align: justify;
             padding: 20px; 
         }
