--- a/codelogs/log3.html
+++ b/codelogs/log3.html
@@ -46,7 +46,7 @@
 
         #codelog1 {
             display: grid;
-            grid-template-columns: auto auto;
+            grid-template-columns: 50%;
             grid-template-rows: auto auto;
             grid-column-gap: 2vw;
             grid-template-areas:
