fixed the grid lol

--- a/codelogs/log3.html
+++ b/codelogs/log3.html
@@ -44,9 +44,9 @@
         }
 
 
-        #codelog1 {
+        #codelog3 {
             display: grid;
-            grid-template-columns: 50%;
+            grid-template-columns: auto auto;
             grid-template-rows: auto auto;
             grid-column-gap: 2vw;
             grid-template-areas:
