--- a/codelogs/log3.html
+++ b/codelogs/log3.html
@@ -27,7 +27,7 @@
 
         #question1 {
             grid-area: question1;
-            background-color: rgb(83, 81, 96);
+            background-color: rgb(142, 139, 165);
             font-family: "Arial", sans-serif;
             color: white;
             text-align: justify;
@@ -36,27 +36,34 @@
 
         #question2 {
             grid-area: question2;
-            background-color: rgb(83, 81, 96);
+            background-color: rgb(142, 139, 165);
             font-family: "Arial", sans-serif;
             color: white;
             text-align: justify;
             padding: 20px; 
         }
 
-
-        #codelog3 {
-            display: grid;
-            grid-template-columns: auto auto;
-            grid-template-rows: auto auto;
-            grid-column-gap: 2vw;
-            grid-template-areas:
-                'h1   h1'
-                'question1  question2';
+        #codelog3 div {
+            width: 100vw;
         }
 
         body {
             background-color: rgb(193, 188, 220);
         }   
+
+        @media (orientation: landscape) {
+
+            #codelog3 div {
+                display: grid;
+                grid-template-columns: auto auto;
+                grid-template-rows: auto auto;
+                grid-column-gap: 2vw;
+                grid-template-areas:
+                    'h1   h1'
+                    'question1  question2';
+            }
+        }
+
 	</style>
 
 </head>
