--- a/codelogs/log3.html
+++ b/codelogs/log3.html
@@ -51,7 +51,7 @@
             background-color: rgb(193, 188, 220);
         }   
 
-        @media (orientation: landscape) {
+        @media (min-width: 800px) {
 
             #codelog3 div {
                 display: grid;
