--- a/codelogs/log3.html
+++ b/codelogs/log3.html
@@ -43,27 +43,21 @@
             padding: 20px; 
         }
 
-        #codelog3 div {
-            width: 100vw;
+
+        #codelog3 {
+            display: grid;
+            grid-template-columns: auto auto;
+            grid-template-rows: auto auto;
+            grid-column-gap: 2vw;
+            grid-template-areas:
+                'h1   h1'
+                'question1  question2';
         }
 
         body {
             background-color: rgb(193, 188, 220);
         }   
-
-        @media (min-width: 800px) {
-
-            #codelog3 div {
-                display: grid;
-                grid-template-columns: auto auto;
-                grid-template-rows: auto auto;
-                grid-column-gap: 2vw;
-                grid-template-areas:
-                    'h1   h1'
-                    'question1  question2';
-            }
-        }
-
+        
 	</style>
 
 </head>
