--- a/codelogs/log3.html
+++ b/codelogs/log3.html
@@ -11,11 +11,13 @@
     <!-- external and internal CSS -->
     <link rel="stylesheet" href="styles.css" media="all">
     <link href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+
 
     <style>
         h2 {
             text-transform: uppercase;
-            font-family: "Arial", sans-serif;
+            font-family: 'Montserrat', sans-serif;
         }
 
         h1 {
@@ -28,7 +30,7 @@
         #question1 {
             grid-area: question1;
             background-color: rgb(142, 139, 165);
-            font-family: "Arial", sans-serif;
+            font-family: 'Montserrat', sans-serif;
             color: white;
             text-align: justify;
             padding: 20px;
@@ -37,7 +39,7 @@
         #question2 {
             grid-area: question2;
             background-color: rgb(142, 139, 165);
-            font-family: "Arial", sans-serif;
+            font-family: 'Montserrat', sans-serif;
             color: white;
             text-align: justify;
             padding: 20px;
