--- a/codelogs/log3.html
+++ b/codelogs/log3.html
@@ -83,13 +83,21 @@
             <h2>What "media features" are supported by media queries — such as "orientation" or "max-width" — and what
                 do they do?</h2>
             <ul>
-                <li>number 1
+                <li>Width and Height: Using the viewport width and height, you can use create sizing that will size to
+                    specific pixels of screen size. For example, if you wanted your layout to look different on a mobile
+                    device versus a laptop, you would use the width and height method to accommodate to those specific
+                    screen sizes.
                 </li>
-                <li>number 2
+                <li>Orientation: similar to the width and height, the orientation is specific to if your screen is going
+                    to be in landscape or portrait mode. You are able to have specific dimensions of your attributes for
+                    someone who has their mobile device in portrait or landscape mode.
                 </li>
-                <li>number 3
+                <li>“AND” logic: You can use this as an extended if statement. So for example, if you wanted a layout to
+                    be specific to an ipad in landscape mode, you could set the width and height and the orientation,
+                    and that way it would be very specific to that thing.
                 </li>
-                <li>number 4
+                <li>“OR” logic: in a very similar way, you can use OR logic, in which you are stating that it could
+                    either be a specific size OR it could be in landscape.
                 </li>
             </ul>
         </section>
