wanted to see what section 1 might look like

--- a/rhododendron/index.html
+++ b/rhododendron/index.html
@@ -20,6 +20,16 @@
         <h1>Pacific Rhododendron</h1>
     </div>
 
+    <main>
+        <div id="Section 1">
+            <h1>Section 1</h1>
+            <p>
+                THis is for section 1!
+            </p>
+        </div>
+
+
+    </main>
 
 
 </body>
