--- a/rhododendron/index.html
+++ b/rhododendron/index.html
@@ -21,12 +21,12 @@
     </div>
 
     <main>
-        <div id="Section 1">
+        <section id="Section 1">
             <h1>Section 1</h1>
             <p>
                 THis is for section 1!
             </p>
-        </div>
+        </section>
 
 
     </main>
