--- a/rhododendron/index.html
+++ b/rhododendron/index.html
@@ -21,7 +21,7 @@
     </div>
 
     <main>
-        <section id="Section 1">
+        <section>
             <h1>Section 1</h1>
             <p>
                 THis is for section 1!
