put the header in a header tag

--- a/rhododendron/index.html
+++ b/rhododendron/index.html
@@ -15,10 +15,12 @@
 
 <body>
 
-    <div id="rhodoPic"></div>
-    <div id="rhodoTitle">
-        <h1>Pacific Rhododendron</h1>
-    </div>
+    <header>
+        <div id="rhodoPic"></div>
+        <div id="rhodoTitle">
+            <h1>Pacific Rhododendron</h1>
+        </div>
+    </header>
 
     <main>
         <section>
