changed background color and added section title

--- a/rhododendron/index.html
+++ b/rhododendron/index.html
@@ -23,7 +23,7 @@
     </header>
 
     <main>
-        <section>
+        <section id="sectionOne">
             <h1>Section 1</h1>
             <p>
                 THis is for section 1!
