--- a/rhododendron/index.html
+++ b/rhododendron/index.html
@@ -10,6 +10,7 @@
 
     <!-- external and internal CSS -->
     <link rel="stylesheet" href="styles.css" media="all">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
 
 </head>
 
