--- a/rhododendron/index.html
+++ b/rhododendron/index.html
@@ -8,9 +8,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pacific Rhododendron</title>
 
-    <!-- external and internal CSS -->
-    <link rel="stylesheet" href="styles.css" media="all">
+    <!-- external and internal CSS -->\
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="styles.css" media="all">
 
 </head>
 
@@ -25,7 +25,7 @@
 
     <main>
         <section id="sectionOne">
-            <h1>Section 1</h1>
+            <h1>Also Known As:</h1>
             <p>
                 THis is for section 1!
             </p>
