--- a/rhododendron/index.html
+++ b/rhododendron/index.html
@@ -9,9 +9,8 @@
     <title>Pacific Rhododendron</title>
 
     <!-- external and internal CSS -->\
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css" media="all">
-
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -25,10 +24,10 @@
 
     <main>
         <section id="sectionOne">
-            <h1>Also Known As:</h1>
-            <p>
-                THis is for section 1!
-            </p>
+            <h1>Common Alternative Names:</h1>
+            <p>Coast Rhododendron</p>
+            <p>Big Leaf Rhododendron</p>
+            <p>Rhododendron Macrophyllum</p>
         </section>
 
 
