added in the other sections

--- a/rhododendron/index.html
+++ b/rhododendron/index.html
@@ -30,7 +30,28 @@
             <p>Rhododendron Macrophyllum</p>
         </section>
 
+        <section id="sectionTwo">
+            <h1>Size:</h1>
+            <p>10-15ft tall</p>
+        </section>
 
+        <section id="sectionThree">
+            <h1>Geography:</h1>
+            <p>Native to the coastal forests of western North America, along the Pacific Northwest</p>
+        </section>
+
+        <section id="sectionFour">
+            <h1>Climate:</h1>
+            <p>Partial Shade</p>
+            <p>Moist and acidic soil</p>
+            <p>Consistent moisture</p>
+        </section>
+
+        <section id="sectionFive">
+            <h1>Sources:</h1>
+            <p>https://calscape.org/Rhododendron-macrophyllum-(Pacific-Rhododendron)</p>
+            <p>https://growcycle.com/plant-directory/pacific-rhododendron?srsltid=AfmBOoqTf7CS8ps8hjiTMo6d91U0YFPErcoKT0BwwAeFUWW6KojnK2Im</p>
+        </section>
     </main>
 
 
