--- a/rhododendron/index.html
+++ b/rhododendron/index.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pacific Rhododendron</title>
 
-    <!-- external and internal CSS -->\
+    <!-- external and internal CSS -->
     <link rel="stylesheet" href="styles.css" media="all">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
 </head>
