--- a/rhododendron/index.html
+++ b/rhododendron/index.html
@@ -49,8 +49,8 @@
 
         <section id="sectionFive">
             <h1>Sources:</h1>
-            <p>https://calscape.org/Rhododendron-macrophyllum-(Pacific-Rhododendron)</p>
-            <p>https://growcycle.com/plant-directory/pacific-rhododendron?srsltid=AfmBOoqTf7CS8ps8hjiTMo6d91U0YFPErcoKT0BwwAeFUWW6KojnK2Im</p>
+            <p><a href="https://calscape.org/Rhododendron-macrophyllum-(Pacific-Rhododendron)">Source 1</a></p>
+            <p><a href="https://growcycle.com/plant-directory/pacific-rhododendron?srsltid=AfmBOoqTf7CS8ps8hjiTMo6d91U0YFPErcoKT0BwwAeFUWW6KojnK2Im">Source 2</a></p>
         </section>
     </main>
 
