added in new section

--- a/rhododendron/index.html
+++ b/rhododendron/index.html
@@ -40,6 +40,14 @@
             <p>Native to the coastal forests of western North America, along the Pacific Northwest</p>
         </section>
 
+        <section id="newSection">
+            <h1>Butterflies and Moths:</h1>
+            <p>Sallow Button</p>
+            <p>Miranda Underwing</p>
+            <p>Fruit-Tree Leafroller Moth</p>
+            <p>Alfalfa Looper Moth</p>
+        </section>
+
         <section id="sectionFour">
             <h1>Climate:</h1>
             <p>Partial Shade</p>
