added tiny project to my main

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
 		<li><a href="/favorite-recipe/index.html">Tiny Project 2: Favorite Recipe</a></li>
 		<li><a href="/anni-albers/index.html">Tiny Project 3: Design Quote Layout (part 1)</a></li>
 		<li><a href="/anni-albers/index2.html">Tiny Project 3: Design Quote Layout (part 2)</a></li>
+		<li><a href="/rhododendron/index.html">Tiny Project 4: Rhododendron</a></li>
 	</ul>
 
 	<h2>Major Project</h2>
