--- a/codelogs/log4.html
+++ b/codelogs/log4.html
@@ -15,6 +15,7 @@
 
 
     <style>
+        
         * {
             box-sizing: border-box;
         }
@@ -32,21 +33,17 @@
         header {
             height: 40vh;
             width: 100vw;
-            background-color: rgb(174, 95, 95);
-            background-attachment: fixed;
+            background-color: rgb(174, 95, 95);        
         }
 
-        #header h1 {
+        h1 {
             position: absolute;
-            bottom: 0;
-            left: 1em;
+            margin: 10%;
             color: rgb(0, 0, 0);
-            font-size: 2.5em;
-            width: calc(100vw / 2em);
+            font-size: 5em;
             font-family: 'Arial', sans-serif;
             text-transform: uppercase;
-            background-attachment: fixed;
-        }
+            text-align: center; }
 
         section {
             background-color: #f1cfcf;
@@ -67,7 +64,7 @@
             font-size: 1.5em;
         }
 
-        section h1 {
+        section h2 {
             font-size: 2em;
             text-transform: uppercase;
         }
@@ -89,6 +86,8 @@
             border-radius: 5%;
         }
     }
+
+    
 
     </style>
 
