fixed section names

--- a/codelogs/log4.html
+++ b/codelogs/log4.html
@@ -100,7 +100,7 @@
         <h1>Code Log 3: CSS Media Queries</h1>
         </header>
 
-        <section id="section1">
+        <section id="sectionOne">
             <h2>How does a CSS media query work, and why is it useful?</h2>
             <p>
                 A CSS media query is aimed to allow for responsive design. Essentially, not all devices are the same
@@ -111,7 +111,7 @@
             </p>
         </section>
 
-        <section id="section2">
+        <section id="sectionTwo">
             <h2>What "media features" are supported by media queries — such as "orientation" or "max-width" — and what
                 do they do?</h2>
             <ul>
