--- a/codelogs/log4.html
+++ b/codelogs/log4.html
@@ -83,35 +83,21 @@
                 height: 40vh;
             }
 
-            section {
-                border-radius: 10%;
-            }
-
-            #sectionOne h2 {
-                float: left;
-                width: calc(100vw/5)
-            }
-
             #sectionOne #p1,
             #sectionOne #p2,
-            #sectionOne #p3 {
-                float: right;
-                width: calc(100vw/5);
-                background-color: #f1cfcf;
-            }
-
-            #sectionTwo h2 {
-                float: left;
-                width: calc(100vw/5);
-                background-color: #f1cfcf;
-            }
-
+            #sectionOne #p3,
             #sectionTwo #p1,
             #sectionTwo #p2,
-            #sectionTwo #p3 {
+            #sectionTwo #p3,
+            #sectionTwo h2,
+            #sectionOne h1   {
                 float: right;
-                width: calc(100vw/5);
+                width: calc(75vw/4);
                 background-color: #f1cfcf;
+                border-radius: 5%;
+                padding: 3vw;
+                margin-left: 5vw;
+                margin-right: 5vw;
             }
         }
     </style>
