fixed the question

--- a/codelogs/log4.html
+++ b/codelogs/log4.html
@@ -90,7 +90,7 @@
             #sectionTwo #p2,
             #sectionTwo #p3,
             #sectionTwo h2,
-            #sectionOne h1   {
+            #sectionOne h2   {
                 float: right;
                 width: calc(75vw/4);
                 background-color: #f1cfcf;
@@ -98,6 +98,11 @@
                 padding: 3vw;
                 margin-left: 5vw;
                 margin-right: 5vw;
+            }
+
+            #sectionTwo h2,
+            #sectionOne h2 {
+                float: left;
             }
         }
     </style>
