--- a/codelogs/log4.html
+++ b/codelogs/log4.html
@@ -83,27 +83,26 @@
                 height: 40vh;
             }
 
-            #sectionOne #p1,
-            #sectionOne #p2,
-            #sectionOne #p3,
-            #sectionTwo #p1,
-            #sectionTwo #p2,
-            #sectionTwo #p3,
-            #sectionTwo h2,
-            #sectionOne h2   {
-                float: right;
-                width: calc(75vw/4);
-                background-color: #f1cfcf;
-                border-radius: 5%;
-                padding: 3vw;
-                margin-left: 5vw;
-                margin-right: 5vw;
+            #sectionOne,
+            #sectionTwo {
+                white-space: nowrap;
+                overflow: hidden;
             }
 
+           
+            #sectionOne h2,
             #sectionTwo h2,
-            #sectionOne h2 {
-                float: left;
+            #sectionOne p,
+            #sectionTwo p {
+                display: inline-block;
+                vertical-align: top;
+                width: 22vw;
+                background-color: #f1cfcf;
+                border-radius: 5%;
+                padding: 2vw;
+                margin: 1vw;
             }
+
         }
     </style>
 
