--- a/codelogs/log4.html
+++ b/codelogs/log4.html
@@ -97,6 +97,11 @@
                 float: right;
             }
 
+            #sectionOne h2,
+            #sectionTwo h2 {
+                float: left;
+            }
+
         }
     
     </style>
