attempting to fix the formatting again

--- a/codelogs/log4.html
+++ b/codelogs/log4.html
@@ -70,13 +70,13 @@
             text-transform: uppercase;
         }
 
-        #sectionOne p {
-            margin-bottom: -0.7em;
-        }
-
 
         @media screen and (orientation: landscape) {
 
+            section {
+                background-color: #301313;
+            }
+            
             h1 {
                 font-size: 5em;
             }
@@ -100,6 +100,7 @@
             #sectionOne h2,
             #sectionTwo h2 {
                 float: left;
+                margin-right: 5vw;
             }
 
         }
