--- a/codelogs/log4.html
+++ b/codelogs/log4.html
@@ -15,6 +15,7 @@
 
 
     <style>
+        
         * {
             box-sizing: border-box;
         }
@@ -43,6 +44,7 @@
             font-family: 'Arial', sans-serif;
             text-transform: uppercase;
             text-align: center;
+            width: 100vw;
         }
 
         section {
@@ -50,7 +52,7 @@
             width: 90vw;
             margin-left: 5vw;
             margin-right: 5vw;
-            margin-bottom: 10vh;
+            margin-bottom: 5vh;
             padding: 4vh;
             padding-bottom: 10vh;
             background-color: #f1cfcf;
@@ -88,14 +90,13 @@
             #sectionTwo h2,
             #sectionOne p,
             #sectionTwo p {
-                width: 22vw;
+                width: 18vw;
                 background-color: #f1cfcf;
                 border-radius: 5%;
                 padding: 2vw;
                 margin: 0;
             }
         }
-
         
     </style>
 
@@ -127,13 +128,13 @@
         <section id="sectionTwo">
             <h2>How does CSS accept color as a value?</h2>
             <p id="p1">
-                Named:
+                Named: The name of the color you want to type. If you type red, you will get the assigned red color.
             </p>
             <p id="p2">
-                Hexadecimal:
+                Hexadecimal: A six-digit alphanumeric code that represents the color you want to change it to.
             </p>
             <p id="p3">
-                RGB:
+                RGB: It creates the color based on the weight of red, green, blue from 0 to 255 on all of them.
             </p>
         </section>
 
