forgot to link the css

--- a/responsive-recipe/index.html
+++ b/responsive-recipe/index.html
@@ -2,30 +2,19 @@
 <html>
 
 <head>
-
     <!-- meta tags and title -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Snickerdoodle Cookies</title>
+    <title>Pacific Rhododendron</title>
 
     <!-- external and internal CSS -->
     <link rel="stylesheet" href="styles.css" media="all">
-    <style>
-        /* in-file CSS here */
-    </style>
-
-    <!-- external and internal JavaScript -->
-    <script src="scripts.js" defer></script>
-    <script>
-        // in-page JavaScript here
-    </script>
-
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
 </head>
 
 <body>
 
     <header>
-        <h1>Snickerdoodle Cookies</h1>
         <img src="jessica-johnston-92G0voshUr0-unsplash (1).jpg">
     </header>
 
