put the pic into a div

--- a/responsive-recipe/index.html
+++ b/responsive-recipe/index.html
@@ -15,11 +15,13 @@
 <body>
 
     <header>
-        <img src="jessica-johnston-92G0voshUr0-unsplash (1).jpg">
+        <div id="snickerdoodlePic"></div>
+        <div id=Title>
+            <h1>Snickerdoodle Cookies</h1>
+        </div>
     </header>
 
     <main>
-        <h1>Snickerdoodle Cookies</h1>
         <section>
             <h2>Ingredients</h2>
             <ul>
