added in the new cook time instructions and css with it

--- a/responsive-recipe/index.html
+++ b/responsive-recipe/index.html
@@ -22,7 +22,12 @@
     </header>
 
     <main>
-        <section>
+        <section id="time">
+            <p>Prep Time: 25 minutes</p>
+            <p>Cook Time: 20 minutes</p>
+        </section>
+
+        <section id="ingredients">
             <h2>Ingredients</h2>
             <ul>
                 <li>Dough Ingredients</li>
@@ -43,7 +48,7 @@
             </ul>
         </section>
 
-        <section>
+        <section id="directions">
             <h2>Directions</h2>
             <ol>
                 <li>Preheat oven to 350 degrees.</li>
