trying to add a time to header

--- a/responsive-recipe/index.html
+++ b/responsive-recipe/index.html
@@ -19,6 +19,11 @@
         <div id=Title>
             <h1>Snickerdoodle Cookies</h1>
         </div>
+
+        <section id="landscapeTime">
+            <p>Prep Time: 25 minutes</p>
+            <p>Cook Time: 20 minutes</p>
+        </section>
         
     </header>
 
