--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
 		<li><a href="/anni-albers/index.html">Tiny Project 3: Design Quote Layout (part 1)</a></li>
 		<li><a href="/anni-albers/index2.html">Tiny Project 3: Design Quote Layout (part 2)</a></li>
 		<li><a href="/rhododendron/index.html">Tiny Project 4: Rhododendron</a></li>
+		<li><a href="/responsive-recipe/">Tiny Project 6: Responsive Recipe</a></li>
 	</ul>
 
 	<h2>Major Project</h2>
