--- a/codelogs/log5.html
+++ b/codelogs/log5.html
@@ -26,7 +26,9 @@
         body {
             padding: 0;
             margin: 0;
-            background-color: #301313;
+            background-image: url("backgroundphoto.jpg");
+            background-size: cover;  
+            background-position: center;
         }
 
         header {
