--- a/codelogs/log5.html
+++ b/codelogs/log5.html
@@ -26,7 +26,7 @@
         body {
             padding: 0;
             margin: 0;
-            background-image: url("backgroundphoto.jpg");
+            background-image: url("background.jpg");
             background-size: cover;  
             background-position: center;
         }
