added in response

--- a/codelogs/log5.html
+++ b/codelogs/log5.html
@@ -27,7 +27,7 @@
             padding: 0;
             margin: 0;
             background-image: url("background.jpg");
-            background-size: cover;  
+            background-size: cover;
             background-position: center;
         }
 
@@ -41,7 +41,7 @@
             position: absolute;
             margin: 10%;
             color: rgb(0, 0, 0);
-            font-size: 3em;
+            font-size: 4em;
             font-family: 'Arial', sans-serif;
             text-transform: uppercase;
             text-align: center;
@@ -83,10 +83,16 @@
         </header>
 
         <section id="sectionOne">
-            <h2>What are the differences between presenting an image using an HTML tag (like <code>&lt;img</code><code>&gt;</code>) and presenting it as
+            <h2>What are the differences between presenting an image using an HTML tag (like
+                <code>&lt;img</code><code>&gt;</code>) and presenting it as
                 the background of an HTML element (using the CSS property background-image)? Think in terms of
                 differences in code as well as differences in functionality and layout.</h2>
-            <p>here is my answer.</p>
+            <p>The difference between using an image with an HTML tag is that the image is a part of the flow of the
+                page. If you see the image to the right of this text, that is put in using HTML, meaning that it is now
+                a part of the flow of the page and this response goes around the image. However, a background image with
+                CSS is what this background is. It is not a part of the flow of the page, and is just used as
+                "decoration" you could say. You can control it with CSS, and in this case, I just set it as the
+                background with no changes.</p>
         </section>
 
     </div>
