--- a/codelogs/log5.html
+++ b/codelogs/log5.html
@@ -93,6 +93,7 @@
                 CSS is what this background is. It is not a part of the flow of the page, and is just used as
                 "decoration" you could say. You can control it with CSS, and in this case, I just set it as the
                 background with no changes.</p>
+            <img src="flowers.jpg">
         </section>
 
     </div>
