finishing up section 1

--- a/codelogs/log5.html
+++ b/codelogs/log5.html
@@ -71,6 +71,14 @@
             font-size: 2em;
             text-transform: uppercase;
         }
+
+        #sectionOne h2, #sectionOne p {
+            width: 60vw;
+        }
+
+        #sectionOne {
+            display: flex;
+        }
     </style>
 
 </head>
