--- a/codelogs/log5.html
+++ b/codelogs/log5.html
@@ -69,11 +69,11 @@
 
         section h2 {
             font-size: 2em;
-            text-transform: uppercase;
         }
 
         #sectionOne h2, #sectionOne p {
             width: 60vw;
+            padding: 2vw;
         }
 
         #sectionOne {
