added in section 2

--- a/codelogs/log5.html
+++ b/codelogs/log5.html
@@ -71,12 +71,14 @@
             font-size: 2em;
         }
 
-        #sectionOne h2, #sectionOne p {
+        #sectionOne h2,
+        #sectionOne p {
             width: 60vw;
             padding: 2vw;
         }
 
-        #sectionOne {
+        #sectionOne
+        #sectionTwo {
             display: flex;
         }
     </style>
@@ -94,7 +96,8 @@
             <h2>What are the differences between presenting an image using an HTML tag (like
                 <code>&lt;img</code><code>&gt;</code>) and presenting it as
                 the background of an HTML element (using the CSS property background-image)? Think in terms of
-                differences in code as well as differences in functionality and layout.</h2>
+                differences in code as well as differences in functionality and layout.
+            </h2>
             <p>The difference between using an image with an HTML tag is that the image is a part of the flow of the
                 page. If you see the image to the right of this text, that is put in using HTML, meaning that it is now
                 a part of the flow of the page and this response goes around the image. However, a background image with
@@ -102,6 +105,12 @@
                 "decoration" you could say. You can control it with CSS, and in this case, I just set it as the
                 background with no changes.</p>
             <img src="flowers.jpg">
+        </section>
+
+        <section id="sectionTwo">
+            <h2>Besides background-image, what other CSS properties affect the display of background images? Describe at
+                least two more CSS properties.</h2>
+            <p>here is my answer</p>
         </section>
 
     </div>
