--- a/codelogs/log5.html
+++ b/codelogs/log5.html
@@ -77,7 +77,7 @@
             padding: 2vw;
         }
 
-        #sectionOne
+        #sectionOne,
         #sectionTwo {
             display: flex;
         }
