--- a/codelogs/log5.html
+++ b/codelogs/log5.html
@@ -110,7 +110,21 @@
         <section id="sectionTwo">
             <h2>Besides background-image, what other CSS properties affect the display of background images? Describe at
                 least two more CSS properties.</h2>
-            <p>here is my answer</p>
+            <p>1. background-attachment: this describes whether or not the background is going to stay in position, and
+                move along with the page: ie, this webstie it scrolls with the rest of the page. or if it stays in
+                place, and everything else scrolls while it stays fixed in place. </p>
+            <p>2. background-repeat: this lets the background image be repeated if the space is too large to take up,
+                and the image is not big enough, it says whether or not the image should repeat or not. In this case,
+                the background does not repeat, but in the instance the page was too large, it would replicate the image
+                as a repeat.</p>
+        </section>
+
+        <section id="sectionThree">
+            <h2>In one sentence, how would you define the differences between dimensions and resolution in a bitmap
+                image?</h2>
+            <p>Dimension describes the amount of pixels that are in an image, whereas the resolution describes how
+                closely those pixels are packed in together, creating a so-called "high" or "low" resolution picture.
+            </p>
         </section>
 
     </div>
