changed the menu to fit my website, linked in the snickerdoodle i already made

--- a/recipe-mini-site/index.html
+++ b/recipe-mini-site/index.html
@@ -23,26 +23,20 @@
 		<a id="navBurger">&#9776;</a>
 
 		<ul>
-			<li><a href="#">My Favorite News Sites</a>
+			<li><a href="index.html">Home</a>
+			</li>
+
+			<li><a href="#">My Recipes</a>
 				<ul>
-					<li><a href="https://arstechnica.com">Ars Technica</a></li>
-					<li><a href="#">Submenu One B</a></li>
-					<li><a href="#">Submenu One C</a></li>
+					<li><a href="recipe-1.html">Snickerdoodle Cookies/a></li>
+					<li><a href="recipe-2.html">Fudge Puddles</a></li>
+					<li><a href="recipe-3.html">S'mores Cookies</a></li>
 				</ul>
 			</li>
 
-			<li><a href="#">Menu Item Two</a>
+			<li><a href="#">Favorite Recipe Sites</a>
 				<ul>
-					<li><a href="#">Submenu Two A</a></li>
-					<li><a href="#">Submenu Two B</a></li>
-					<li><a href="#">Submenu Two C</a></li>
-					<li><a href="#">Submenu Two D</a></li>
-					<li><a href="#">Submenu Two E</a></li>
-				</ul>
-			</li>
-
-			<li><a href="#">Menu Item Three</a>
-				<ul>
+                    <li>><a href="https://arstechnica.com">Ars Technica</a></li>
 					<li><a href="#">Submenu Three A</a></li>
 					<li><a href="#">Submenu Three B</a></li>
 				</ul>
