specified the css for recipe 1

--- a/recipe-mini-site/index.html
+++ b/recipe-mini-site/index.html
@@ -28,7 +28,7 @@
 
 			<li><a href="#">My Recipes</a>
 				<ul>
-					<li><a href="recipe-1.html">Snickerdoodle Cookies/a></li>
+					<li><a href="recipe-1.html">Snickerdoodle Cookies</a></li>
 					<li><a href="recipe-2.html">Fudge Puddles</a></li>
 					<li><a href="recipe-3.html">S'mores Cookies</a></li>
 				</ul>
