--- a/recipe-mini-site/recipe-1.html
+++ b/recipe-mini-site/recipe-1.html
@@ -12,7 +12,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
 </head>
 
-<body>
+<body class="recipe-1">
 
     <header>
         <div id="snickerdoodlePic"></div>
