--- a/recipe-mini-site/recipe-3.html
+++ b/recipe-mini-site/recipe-3.html
@@ -17,7 +17,7 @@
     <header>
         <div id="smoresPic"></div>
         <div id=Title>
-            <h1>S'more Cookies/h1>
+            <h1>S'more Cookies</h1>
             <section id="landscapeTime">
                 <p>Prep Time: 10 minutes</p>
                 <p>Cook Time: 10 minutes</p>
