added some stuff to the front

--- a/recipe-mini-site/index.html
+++ b/recipe-mini-site/index.html
@@ -47,8 +47,14 @@
 	</nav>
 
 	<main>
-		<h1>Some content goes here</h1>
-		<p>Eventually this will be something useful.</p>
+		<h1>Trey's Recipes!</h1>
+		<p>Use the navigation bar to look through 3 of recipes, or 3 of my favorite recipes. </p>
+		<img src="Fudge Puddles.png">
+		<h2>Fudge Puddles!</h2>
+		<img src="smores coookies.png">
+		<h2>S'mores Cookies!</h2>
+		<img src="jessica-johnston-92G0voshUr0-unsplash (1).jpg">
+		<h2>Snickerdoodle Cookies</h2>
 	</main>
 
 </body>
