--- a/recipe-mini-site/recipe-3.html
+++ b/recipe-mini-site/recipe-3.html
@@ -56,7 +56,7 @@
         <section id="directions">
             <h2>Directions</h2>
             <ol>
-                <li>Chop Graham crackers and Hershey bar.</li>>
+                <li>Chop Graham crackers and Hershey bar.</li>
                 <li>Combine flour, salt, baking powder, baking soda, and cornstarch in a bowl.</li>
                 <li>Beat butter and sugars in a bowl until creamy. Add in egg and vanilla.</li>
                 <li>Gradually add flour mixture to butter mixture, beating on low speed.</li>
