added favorite recipes

--- a/recipe-mini-site/index.html
+++ b/recipe-mini-site/index.html
@@ -36,9 +36,9 @@
 
 			<li><a href="#">Favorite Recipe Sites</a>
 				<ul>
-                    <li>><a href="https://arstechnica.com">Ars Technica</a></li>
-					<li><a href="#">Submenu Three A</a></li>
-					<li><a href="#">Submenu Three B</a></li>
+                    <li>><a href="https://www.loveandlemons.com/brownies-recipe/">Brownies</a></li>
+					<li><a href="https://celebratingsweets.com/strawberry-shortcake-cake/">Strawberry Shortcake</a></li>
+					<li><a href="https://sugarspunrun.com/best-cheesecake-recipe/">Cheesecake</a></li>
 				</ul>
 			</li>
 
