fixed image, then added  to my main site

--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
 		<li><a href="/anni-albers/index.html">Tiny Project 3: Design Quote Layout (part 1)</a></li>
 		<li><a href="/anni-albers/index2.html">Tiny Project 3: Design Quote Layout (part 2)</a></li>
 		<li><a href="/rhododendron/index.html">Tiny Project 4: Rhododendron</a></li>
-		<li><a href="/responsive-recipe/">Tiny Project 6: Responsive Recipe</a></li>
+		<li><a href="/responsive-recipe/index.html">Tiny Project 6: Responsive Recipe</a></li>
+		<li><a href="/recipe-mini-site/index.html">Tiny Project 7: Recipe Mini-site</a></li>
 	</ul>
 
 	<h2>Major Project</h2>
