added images in

--- a/long-story/index.html
+++ b/long-story/index.html
@@ -17,7 +17,15 @@
 <body>
 
     <main>
-        
+        <img src="lover.jpg">
+        <img src="Fearless.png">
+        <img src="Red.jpg">
+        <img src="Speak Now.jpg">
+        <img src="Reputation.jpg">
+        <img src="Folklore.jpg">
+        <img src="Evermore.jpg">
+        <img src="1989.jpg">
+        <img src="midnights.jpg">
     </main>
 
 
