--- a/long-story/index.html
+++ b/long-story/index.html
@@ -18,7 +18,7 @@
 
     <main>
         <div id="images">
-            <img src="lover.jpg">
+            <img src="lover.jpeg">
             <img src="Fearless.png">
             <img src="Red.jpg">
             <img src="Speak Now.jpg">
