--- a/long-story/index.html
+++ b/long-story/index.html
@@ -17,17 +17,34 @@
 <body>
 
     <main>
-        <div id="images">
-            <img src="lover.jpeg">
-            <img src="Fearless.png">
-            <img src="Red.jpg">
-            <img src="Speak Now.jpg">
-            <img src="Reputation.jpg">
-            <img src="Folklore.jpg">
-            <img src="Evermore.jpg">
-            <img src="1989.jpg">
-            <img src="midnights.jpg">
-        </div>
+        <section id="lover">
+            <h2>Taylor Swift opens her tour with her set from the album Lover.</h2>
+        </section>
+        <section id="fearles">
+            <h2>She then moves on to her set from the Fearless album.</h2>
+        </section>
+        <section id="red">
+            <h2>Taylor Swift the performs a few songs from her Red album.</h2>
+        </section>
+        <section id="speakNow">
+            <h2>Then she performs just one song from her Speak Now album.</h2>
+        </section>
+        <section id="reputation">
+            <h2>She then swfitly moves into her beloved reputation set.</h2>
+        </section>
+        <section id="foklore">
+            <h2>Toning it down, she now performs her folklore album.</h2>
+        </section>
+        <section id="evermore">
+            <h2>Transitioning seamlessly into her evermore set.</h2>
+        </section>
+        <section id="nine">
+            <h2>Switching beats, she jumps into her popular 1989 set.</h2>
+        </section>
+         <section id="midnights">
+            <h2>Finally, she closes out the show with her Midnights album</h2>
+        </section>
+        
     </main>
 
 
