added to homepage

--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@
 		<li><a href="/rhododendron/index.html">Tiny Project 4: Rhododendron</a></li>
 		<li><a href="/responsive-recipe/index.html">Tiny Project 6: Responsive Recipe</a></li>
 		<li><a href="/recipe-mini-site/index.html">Tiny Project 7: Recipe Mini-site</a></li>
+		<li><a href="/dark-flower/">Tiny Project 8: Dark Flower</a></li>
+		<li><a href="/long-story/">Tiny Project 9: Long Story</a></li>
 	</ul>
 
 	<h2>Major Project</h2>
