--- a/long-story/index.html
+++ b/long-story/index.html
@@ -6,7 +6,7 @@
     <!-- meta tags and title -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pacific Rhododendron</title>
+    <title>Long Story</title>
 
     <!-- external and internal CSS -->
     <link rel="stylesheet" href="styles.css" media="all">
