--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
 	<!-- external and internal CSS -->
 	<link rel="stylesheet" href="styles.css" media="all">
+	<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
 	<style>
 		/* in-file CSS here */
 	</style>
