added the 10 new pages and fixed the navigation bar

--- a/major-project/index.html
+++ b/major-project/index.html
@@ -6,7 +6,7 @@
 	<!-- meta tags and title -->
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Responsive Menu Demo</title>
+	<title>Noah Kahan</title>
 
 	<!-- external and internal CSS -->
 	<link rel="stylesheet" href="styles.css" media="all">
@@ -29,19 +29,28 @@
 			<li><a href="index.html">Home</a>
 			</li>
 
-			<li><a href="#">My Recipes</a>
+			<li><a href="#">Albums/EPs</a>
 				<ul>
-					<li><a href="recipe-1.html">Snickerdoodle Cookies</a></li>
-					<li><a href="recipe-2.html">Fudge Puddles</a></li>
-					<li><a href="recipe-3.html">S'mores Cookies</a></li>
+					<li><a href="hurt-somebody.html">Hurt Somebody</a></li>
+					<li><a href="cape-elizabeth.html">Cape Elizabeth</a></li>
+					<li><a href="i-was-i-am.html">I was / I am</a></li>
+                    <li><a href="busyhead.html">Busyhead</a></li>
+                    <li><a href="stick-season.html">Stick Season</a></li>
 				</ul>
 			</li>
 
-			<li><a href="#">Favorite Recipe Sites</a>
+			<li><a href="#">Favorite Songss</a>
 				<ul>
-                    <li>><a href="https://www.loveandlemons.com/brownies-recipe/">Brownies</a></li>
-					<li><a href="https://celebratingsweets.com/strawberry-shortcake-cake/">Strawberry Shortcake</a></li>
-					<li><a href="https://sugarspunrun.com/best-cheesecake-recipe/">Cheesecake</a></li>
+                    <li>><a href="view-between.html">View Between Villages</a></li>
+					<li><a href="northern-attitude.html">Northern Attitude (with Hozier)</a></li>
+					<li><a href="everywhere-everything.html">Everywhere, Everything (with Gracie Abrams)</a></li>
+				</ul>
+			</li>
+
+            <li><a href="#">History</a>
+				<ul>
+                    <li>><a href="biography.html">Biography</a></li>
+					<li><a href="past-concerts.html">Past Concerts</a></li>
 				</ul>
 			</li>
 
@@ -53,6 +62,10 @@
 		<h1>Noah Kahan</h1>
 		<p>Use the navigation bar<p></p>
 	</main>
+
+    <footer>
+        <p>This is a fan made page for Noah Kahan. Not associated with him in any way.</p>
+    </footer>
 
 </body>
 
