--- a/major-project/index.html
+++ b/major-project/index.html
@@ -41,7 +41,7 @@
 
 			<li><a href="#">Favorite Songss</a>
 				<ul>
-                    <li>><a href="view-between.html">View Between Villages</a></li>
+                    <li><a href="view-between.html">View Between Villages</a></li>
 					<li><a href="northern-attitude.html">Northern Attitude (with Hozier)</a></li>
 					<li><a href="everywhere-everything.html">Everywhere, Everything (with Gracie Abrams)</a></li>
 				</ul>
@@ -49,7 +49,7 @@
 
             <li><a href="#">History</a>
 				<ul>
-                    <li>><a href="biography.html">Biography</a></li>
+                    <li><a href="biography.html">Biography</a></li>
 					<li><a href="past-concerts.html">Past Concerts</a></li>
 				</ul>
 			</li>
@@ -58,7 +58,7 @@
 
 	</nav>
 
-	<main>
+	<main class="home">
 		<h1>Noah Kahan</h1>
 		<p>Use the navigation bar<p></p>
 	</main>
