added album covers to home page

--- a/major-project/index.html
+++ b/major-project/index.html
@@ -10,8 +10,8 @@
 
 	<!-- external and internal CSS -->
 	<link rel="stylesheet" href="styles.css" media="all">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Fraunces:wght@400;700&display=swap">
+	<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Fraunces:wght@400;700&display=swap">
 
 
 	<!-- external and internal JavaScript -->
@@ -34,22 +34,22 @@
 					<li><a href="hurt-somebody.html">Hurt Somebody</a></li>
 					<li><a href="cape-elizabeth.html">Cape Elizabeth</a></li>
 					<li><a href="i-was-i-am.html">I was / I am</a></li>
-                    <li><a href="busyhead.html">Busyhead</a></li>
-                    <li><a href="stick-season.html">Stick Season</a></li>
+					<li><a href="busyhead.html">Busyhead</a></li>
+					<li><a href="stick-season.html">Stick Season</a></li>
 				</ul>
 			</li>
 
 			<li><a href="#">Favorite Songss</a>
 				<ul>
-                    <li><a href="view-between.html">View Between Villages</a></li>
+					<li><a href="view-between.html">View Between Villages</a></li>
 					<li><a href="northern-attitude.html">Northern Attitude (with Hozier)</a></li>
 					<li><a href="everywhere-everything.html">Everywhere, Everything (with Gracie Abrams)</a></li>
 				</ul>
 			</li>
 
-            <li><a href="#">History</a>
+			<li><a href="#">History</a>
 				<ul>
-                    <li><a href="biography.html">Biography</a></li>
+					<li><a href="biography.html">Biography</a></li>
 					<li><a href="past-concerts.html">Past Concerts</a></li>
 				</ul>
 			</li>
@@ -60,12 +60,25 @@
 
 	<main class="home">
 		<h1>Noah Kahan</h1>
-		<p>Use the navigation bar<p></p>
+		<p>Use the navigation bar to read more about Noah Kahan and his work!</p>
+		<section class="albums">
+			<h2>Albums/EPs</h2>
+			<p id="hurtSomebody">Hurt Somebody</p>
+			<img src="hurt-somebody_cover.jpg">
+			<p id="capeElizabeth">Cape Elizabeth</p>
+			<img src="cape-elizabeth_cover.jpg">
+			<p id="iWasIAm">I was / I am</p>
+			<img src="i-was-i-am_cover.jpg">
+			<p id="busyhead">Busyhead</p>
+			<img src="busyhead_cover.jpg">
+			<p id="stickSeason">Stick Season</p>
+			<img src="stick-season_cover.jpg">
+		</section>
 	</main>
 
-    <footer>
-        <p>This is a fan made page for Noah Kahan. Not associated with him in any way.</p>
-    </footer>
+	<footer>
+		<p>This is a fan made page for Noah Kahan. Not associated with him in any way.</p>
+	</footer>
 
 </body>
 
