added a div class to all of the albums for front cover

--- a/major-project/index.html
+++ b/major-project/index.html
@@ -63,16 +63,26 @@
 		<p>Use the navigation bar to read more about Noah Kahan and his work!</p>
 		<section class="albums">
 			<h2>Albums/EPs</h2>
-			<p id="hurtSomebody">Hurt Somebody</p>
-			<img src="hurt-somebody_cover.jpg">
-			<p id="capeElizabeth">Cape Elizabeth</p>
-			<img src="cape-elizabeth_cover.jpg">
-			<p id="iWasIAm">I was / I am</p>
-			<img src="i-was-i-am_cover.jpg">
-			<p id="busyhead">Busyhead</p>
-			<img src="busyhead_cover.jpg">
-			<p id="stickSeason">Stick Season</p>
-			<img src="stick-season_cover.jpg">
+			<div class="album">
+				<p>Hurt Somebody</p>
+				<img src="hurt-somebody_cover.jpg">
+			</div>
+			<div class="album">
+				<p>Cape Elizabeth</p>
+				<img src="cape-elizabeth_cover.jpg">
+			</div>
+			<div class="album">
+				<p>I was / I am</p>
+				<img src="i-was-i-am_cover.jpg">
+			</div>
+			<div class="album">
+				<p>Busyhead</p>
+				<img src="busyhead_cover.jpg">
+			</div>
+			<div class="album">
+				<p>Stick Season</p>
+				<img src="stick-season_cover.jpg">
+			</div>
 		</section>
 	</main>
 
