added section for songs

--- a/major-project/index.html
+++ b/major-project/index.html
@@ -84,6 +84,26 @@
 				<img src="stick-season_cover.jpg">
 			</div>
 		</section>
+
+		<section id="songs">
+			<h2>Favorite Songs</h2>
+			<div class="song">
+				<h3>The View Between Villages</h3>
+				<p>Length: 3:35</p>
+				<p>Album: Stick Season</p>
+			</div>
+			<div class="song">
+				<h3>Northern Attitude (with Hoizer)</h3>
+				<p>Length: 4:27</p>
+				<p>Album: Stick Season</p>
+			</div>
+			<div class="song">
+				<h3>Everywhere, Everything (with Gracie Abrams)</h3>
+				<p>Length: 417</p>
+				<p>Album: Stick Season</p>
+			</div>
+		</section>
+
 	</main>
 
 	<footer>
